--- a/src/JXVM4J/JXVM4J/JXVM4J.csproj
+++ b/src/JXVM4J/JXVM4J/JXVM4J.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{58D1C5A5-5AB3-42CB-A9FA-A763C0807BBB}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>JXVM4J</RootNamespace>
     <AssemblyName>JXVM4J</AssemblyName>
@@ -29,6 +29,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -39,11 +42,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Share\Interpreter\AbstractExecutor.cs" />
+    <Compile Include="JavaExecutor.cs" />
+    <Compile Include="program.cs" />
+    <Compile Include="Share\Interpreter\AbstractInterpreter.cs" />
     <Compile Include="Share\Interpreter\JavaInstruction.cs" />
     <Compile Include="Share\Interpreter\JavaInstructionTable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Share\Interpreter\NativeExecutor.cs" />
+    <Compile Include="Share\Interpreter\NativeInterpreter.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
